--- a/wiki/ProjectVeridiumIntroduction.wiki
+++ b/wiki/ProjectVeridiumIntroduction.wiki
@@ -22,8 +22,11 @@ Basic GamePlay
 
 = Iteration =
 Iteration1: displaying things on the screen. (View)
+Create a game structure and framework. (Controller)
+Create special data types for game. (Model)
 
 Iteration2: adding/remove graphic/sprite from the screen. (View)
+adding/remove buildings to the city (Model) *Feature 1*
 
 Iteration3: sorting algorithm for isometric view. (View)
 
