--- a/wiki/ProjectVeridiumIntroduction.wiki
+++ b/wiki/ProjectVeridiumIntroduction.wiki
@@ -21,11 +21,11 @@ Basic GamePlay
 *Feature 5* : Dispensing resources to city and town. (Rate of production)
 
 = Iteration =
-Iteration1: displaying things on the screen. (View)
+|| Iteration1 ||: displaying things on the screen. (View)
 Create a game structure and framework. (Controller)
 Create special data types for game. (Model)
 
-Iteration2: adding/remove graphic/sprite from the screen. (View)
+|| Iteration2 ||: adding/remove graphic/sprite from the screen. (View)
 adding/remove buildings to the city (Model) *Feature 1*
 
 Iteration3: sorting algorithm for isometric view. (View)
