Edited wiki page IterationOne through web user interface.

--- a/wiki/IterationOne.wiki
+++ b/wiki/IterationOne.wiki
@@ -9,7 +9,14 @@
 
 #1 Approach: Using adapter pattern.
 For example, "Building" is a game object, which is a model.
-We create an adapter called "sprite" to handle a view and representation of the building object. Sprite (adapter) will keep track of diffferent representation of building such as tent, fortress, barrack. Each representation is basically either sprite (graphic) or movie clip object. What Sprite (adapter) does is to get information from "Building" object such as type of building (barrack vs. fortress etc...) then create an object that has an image reprenstation of the type of building (barrack vs. fortress). Then feed "Sprite" to View to process.
+We create an adapter called "sprite" to handle a view and representation of the building object. Sprite (adapter) will keep track of different representation of building such as tent, fortress, barrack. Each representation is basically either sprite (graphic) or movie clip object. What Sprite (adapter) does is to get information from "Building" object such as type of building (barrack vs. fortress etc...) then create an object that has an image reprenstation of the type of building (barrack vs. fortress). Then feed "Sprite" to View to process.
+
+= Tasks =
+||Task || Time spent || Description ||
+|| Task A || || Construct SpriteSheet object to manage all image objects ||
+|| Task B || || Integrate with Building and other game objects with View object ||
+|| Task C || || View: Sort algorithm based on game (X,Y) coordinate ||
+|| Task D || || View: display in the correct order after add and remove ||
 
 
 #2 Approach: "Building", which is a game object, only keeps track of frame index corresponding to the spritesheet. Then feed this number to View. Then view creates an object called "sprite" or "spritesheet", which is to draw part of the entire spritesheet.
