--- a/wiki/IterationOne.wiki
+++ b/wiki/IterationOne.wiki
@@ -38,5 +38,7 @@ In term of View Object, besides creating corresponding "SpriteSheet" and reprens
 = Tasks (View Object) =
 
 ||Task || Time spent || Description ||
-|| Task C || || View: Sort algorithm based on game (X,Y) coordinate ||
-|| Task D || || View: display in the correct order after add and remove ||
+|| Task C || 2 hours || View: Display one block building in an isometric manner. ||
+|| Task D || || View: Display multi-blocks building in an isometric manner. ||
+|| Task E || || View: Sort algorithm based on game (X,Y) coordinate ||
+|| Task F || || View: display in the correct order after add and remove ||
