Edited wiki page IterationOne through web user interface.

--- a/wiki/IterationOne.wiki
+++ b/wiki/IterationOne.wiki
@@ -25,7 +25,8 @@ We create an adapter called "sprite" to handle a view and representation of the 
 
 = #What we actually implement: =
 
-We're using "Strategy" design pattern. We have "SpriteSheet" object to manage all representation of the game object, "Building" object. Each representation is basically either sprite (graphic) or movie clip object. The "SpriteSheet" will keep track of how many images needed and what to be displayed based on type of the building.  
+We're using "Strategy" design pattern. We have "SpriteSheet" object to manage all representation of the game object, "Building" object. Each representation is basically either sprite (graphic) or movie clip object. The "SpriteSheet" will keep track of how many images needed and what to be displayed based on type of the building. "SpriteSheet" will hold different graphical objects that are used for representing different type of buildings. Once the "SpriteSheet" is instantiated, it will determine which graphical objects need to be used. Most graphical objects are quite similar, but vary a little in term of visual representation.
+
 Meanwhile, View object will act as an interface and controller of the view. Basically, we need to feed "Building" objects to "View" and then "View" will extract relevant information (such as X,Y coordinate and type of object) from each "Building" object and then create a "SpriteSheet" corresponding to type of the "Building" object.
 
 In term of View Object, besides creating corresponding "SpriteSheet" and reprensentation of the "Building" object, it also controls how things should be displayed on the screen. In this case, we want all game objects to be displayed into an isometric perspective. Therefore, we need a sort algorithm in order to ensure everything being displayed correctly and also we need to make sure that it's fast enough.
