--- a/wiki/IterationTWO.wiki
+++ b/wiki/IterationTWO.wiki
@@ -34,3 +34,11 @@ We discovered that when we attached mouse event handler to the gamecanvas. It is
 
 = #2 Determining the current tile based on (X,Y) of mouse click. =
 Feeding (X,Y) of the mouse click position still does not translate into a correct tile nth position.
+It seems like "collision detection" is a bit of a problem in the isometric view.
+
+Approach#1 Using hitArea with event handler of each representation of an object.
+Basically, we draw a new shape of hit area and assign it to the core image object.
+Then we attach event handler such as mouse click to it to check if the event.target is the same as the shape we draw for hit area. The downside is that we have to restruct and duplciate method to all of our design for each image representation.
+
+Approach#2 Write an entire new collision detection. 
+Less work in term of restructuring the objects. Just focus on collision detection. However, the downside is that it will get more complicated in itself.
