--- a/wiki/IterationTWO.wiki
+++ b/wiki/IterationTWO.wiki
@@ -24,7 +24,7 @@ What "gameCanvas" is just a basic controller for "city" and "worldmap" canvas. E
 || Task B || 5 hours || (View) Add a building into a city by mouse clicking ||
 || Task C || 1 hours || Prevent adding a building into an occupied tile when click ||
 || Task D || 3 hours || (View) Remove a building from a city by mouse clicking ||
-|| Task E || || Highlight selected tile when mouse hover over or click ||
+|| Task E || 2 hours || Highlight selected tile when mouse hover over or click (Rob) ||
 || Task F || 2 hours || Implement a complete event handler/MOUSE I/O listener ||
 
 = Issues = 
