--- a/wiki/IterationThree.wiki
+++ b/wiki/IterationThree.wiki
@@ -15,7 +15,7 @@
 
 || Tasks || Time spent || Description ||
 || Task A || || Finalize game contents (Design) ||
-|| Task B || || Advanced Menu System: Pagination of list of buildings ||
+|| Task B || 6 hours || Advanced Menu System: Pagination of list of buildings ||
 || Task C || || Advanced Menu System: Click at the building on the menu ||
 || Task D || || Advanced Menu System: Prevent clicking if not enough resources ||
 || Task E || || Advanced Menu System: Switch between menu ||
