--- a/wiki/IterationThree.wiki
+++ b/wiki/IterationThree.wiki
@@ -18,10 +18,8 @@
 || Task B || 6 hours || Advanced Menu System: Pagination of list of buildings ||
 || Task C || 3 hours || Advanced Menu System: Click at the building on the menu ||
 || Task D || 1.5 hours || Advanced Menu System: Prevent clicking if not enough resources ||
-|| Task E || || Advanced Menu System: Switch between menu ||
-|| Task E || || Advanced Menu System: Switch between menu ||
-|| Task F || || Tab of building category on the menu ||
-|| Task G || || Switch between category of the building ||
-|| Task H || || Show buildings corresponding to each type || 
-|| Task I || || Cancel button (Switch to select mode) ||
-|| Task J || || Stat Pop Up Windows (display pop. allocation ||
+|| Task E || 2 hours || Advanced Menu System: Switch between category of building ||
+|| Task F || 0.5 hours || Tab of building category on the menu ||
+|| Task G || 1 hours || Show buildings corresponding to each type once tab is clicked. || 
+|| Task H || 0.5 hours || Cancel button (Switch to select mode) ||
+|| Task I || || Stat Pop Up Windows (display pop. allocation ||
