--- a/wiki/IterationThree.wiki
+++ b/wiki/IterationThree.wiki
@@ -23,3 +23,4 @@
 || Task G || 3 hours || Show buildings corresponding to each type once tab is clicked. || 
 || Task H || 0.5 hours || Cancel button (Switch to select mode) ||
 || Task I || || Stat Pop Up Windows (display pop. allocation ||
+|| Task J || || Display player's profile (resources) on the screen ||
