--- a/wiki/IterationThree.wiki
+++ b/wiki/IterationThree.wiki
@@ -22,5 +22,8 @@
 || Task F || 0.5 hours || Tab of building category on the menu ||
 || Task G || 3 hours || Show buildings corresponding to each type once tab is clicked. || 
 || Task H || 0.5 hours || Cancel button (Switch to select mode) ||
-|| Task I || || Stat Pop Up Windows (display pop. allocation ||
+|| Task I || 0.5 hours || Stat Pop Up Windows (Stat of population allocaiton) ||
 || Task J || 0.5 hours || Display player's profile (resources) on the screen ||
+|| Task K || || Pop-Up Window: increase/decrease player's pop ||
+|| Task L || || Pop-Up Window: New windows for allocate soldiers (type)||
+|| Task M || || Pop-Up Window: New windows for allocate workers (type) ||
