--- a/wiki/IterationFour.wiki
+++ b/wiki/IterationFour.wiki
@@ -11,8 +11,15 @@ We will deal with contents and logic within a game.
 
 - Resources distribution and reproduction within a period of time
 
+= Design on soldiers allocation =
 
+= Upgrade soldiers =
 
+All soldiers will initially have a "level#1" status, so called "minute-man". Then you can allocate a certain amount of "level#1" soldiers to "level#2". Let's say we have x amount of "level#2" soldiers after the upgrade. Then to be able to upgrade soldiers to "level#3", we can only upgrade for x amount, which is the amount of "level#2" soldiers. Basically, each soldier must be going through level#1 and so on before reaching the highest level.
+
+= Enable soldiers to be able to be upgraded =
+
+To be able to upgrade soldiers, each player must build certain types of buildings. Some higher level buildings will enable each player to train soldiers to higher level. 
 
 = Tasks =
 || Task || Time Spent || Description ||
