Edited wiki page IterationFour through web user interface.

--- a/wiki/IterationFour.wiki
+++ b/wiki/IterationFour.wiki
@@ -33,7 +33,7 @@ is equal to || (# of attackers) x ( (# of attackers) x attack value ) / (# of de
 
 = Tasks =
 || Task || Time Spent || Description ||
-|| Task A || || Battlefield formula/algorithm: attacker and defender ||
+|| Task A || 3 hours || Battlefield formula/algorithm: attacker and defender ||
 || Task B || || Determine different attack and defense values based on type of soldiers ||
 || Task C || || Implement count-down timer for every 5 mins ||
 || Task D || || ||
