Edited wiki page IterationFive through web user interface.

--- a/wiki/IterationFive.wiki
+++ b/wiki/IterationFive.wiki
@@ -10,6 +10,7 @@
 || Task E || || Disable resources given until required building is completed. ||
 || Task F || 1 hour || Change image from construction to normal once it finishes building. ||
 || Task G || 3 hours || Update the correct values of requirement when building is complete. ||
+|| Task H || || Update the capacity when certain buildings are finished ||
 
 - Allocate different type of soldiers
 
