--- a/wiki/IterationFive.wiki
+++ b/wiki/IterationFive.wiki
@@ -7,7 +7,7 @@
 || Task B || 1 hours (c) || Display building requirement when mouse over. ||
 || Task C || || Display remaining time before building is finished when mouse over. ||
 || Task D || || Display soldiers allocation menu when mouse over a specific military building. ||
-|| Task E || || Disable resources given until required building is completed. ||
+|| Task E || 3 hours || Disable resources given until required building is completed. ||
 || Task F || 1 hour || Change image from construction to normal once it finishes building. ||
 || Task G || 3 hours || Update the correct values of requirement when building is complete. ||
 || Task H || || Update the capacity when certain buildings are finished ||
