--- a/wiki/IterationFive.wiki
+++ b/wiki/IterationFive.wiki
@@ -16,11 +16,12 @@ For the building type that increases city's capacity, the flag will set out and 
 || Task A || 3 hours || Taking times to build a building. ||
 || Task B || 1 hours (c) || Display building requirement when mouse over. ||
 || Task C || || Display remaining time before building is finished when mouse over. ||
-|| Task D || || Display soldiers allocation menu when mouse clicking at a specific military building. ||
+|| Task D || 4 hours|| Display soldiers allocation menu when mouse clicking at stat. ||
 || Task E || 3 hours || Disable resources given until required building is completed. ||
 || Task F || 1 hour || Change image from construction to normal once it finishes building. ||
 || Task G || 3 hours || Update the correct values of requirement when building is complete. ||
 || Task H || 1 hour || Update the capacity when certain buildings are finished ||
+|| Task I || || Mouseover and show requirement for each building type ||
 
 - Allocate different type of soldiers
 
