Edited wiki page IterationFive through web user interface.

--- a/wiki/IterationFive.wiki
+++ b/wiki/IterationFive.wiki
@@ -14,15 +14,10 @@ For the building type that increases city's capacity, the flag will set out and 
 
 || Task || Time Spent || Description ||
 || Task A || 3 hours || Taking times to build a building. ||
-|| Task B || 1 hours (c) || Display building requirement when mouse over. ||
+|| Task B || 2 hours || Display building requirement when mouse over. ||
 || Task C || 1 hour || Display remaining time before building is finished when mouse over. ||
 || Task D || 4 hours|| Display soldiers allocation menu when mouse clicking at stat. ||
 || Task E || 3 hours || Disable resources given until required building is completed. ||
 || Task F || 1 hour || Change image from construction to normal once it finishes building. ||
 || Task G || 3 hours || Update the correct values of requirement when building is complete. ||
 || Task H || 1 hour || Update the capacity when certain buildings are finished ||
-- Allocate different type of soldiers
-
-- Allocate workers via stat bar
-
-- 
