--- a/wiki/IterationFive.wiki
+++ b/wiki/IterationFive.wiki
@@ -21,3 +21,4 @@ For the building type that increases city's capacity, the flag will set out and 
 || Task F || 1 hour || Change image from construction to normal once it finishes building. ||
 || Task G || 3 hours || Update the correct values of requirement when building is complete. ||
 || Task H || 1 hour || Update the capacity when certain buildings are finished ||
+|| Task J || 1 hour || Prevent user from remove only last remaining town square. ||
