--- a/wiki/IterationSix.wiki
+++ b/wiki/IterationSix.wiki
@@ -32,3 +32,8 @@ This iteration will deal with the following features:
 = Multiplayer/Network Game Components =
 || Task A || || Integrate socket and command protocol into a city-game ||
 || Task B || || Integrate socket and command protocal into a worldmap-game ||
+
+= Interface of responding from Server =
+|| Task A || || (Game) Event triggered once receive info from server ||
+|| Task B || || Admin message triggered once receive from server ||
+|| Task C || || Notify winning or losing for the battle ||
